# app/Http/Requests/V1/SendVerifyCodeRequest.php
@@ -6,26 +6,18 @@ use Illuminate\Foundation\Http\FormRequest;
 
 /**
  * @OA\Schema(
- *     schema="LoginRequest",
+ *     schema="SendVerifyCodeRequest",
  *     type="object",
- *     required={"phone", "code"},
+ *     required={"phone"},
  *     @OA\Property(
  *         property="phone",
  *         type="string",
  *         example="13800138000",
  *         description="User Phone"
- *     ),
- *     @OA\Property(
- *         property="code",
- *         type="string",
- *         example="1234",
- *         description="Verification code",
- *         minLength=4,
- *         maxLength=4
  *     )
  * )
  */
-class LoginRequest extends FormRequest
+class SendVerifyCodeRequest extends FormRequest
 {
     public function authorize(): bool
     {
@@ -36,7 +28,6 @@ class LoginRequest extends FormRequest
     {
         return [
             'phone' => ['required', 'string', 'regex:/^1[3-9]\d{9}$/'],
-            'code' => ['required', 'string', 'min:4', 'max:4'],
         ];
     }
 }
